# OOP-course-work

./: .flake8  README.md  config.py  lint_add.cmd  main.py  pyproject.toml
src/: file_operation.py  get_data_api.py  interaction.py  vacancy.py
tests/: test_file_operation.py  test_get_data_api.py  test_interaction.py  test_vacancy.py
